--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-    <title> BGM </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
+<h1>Welcome</h1>
+<label> select the option </label>
+<select > 
+<option value="Audio">Audio</option>
+<option value="Video">Video</option>
+</select>
 <body>
-    <audio controls src="bgm.mp3" >
+    <audio controls src="bgm.mp3" ></audio>
+    <video controls src="video.mp4"></video>
 </body>
 </html>
