--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Audio and Video List</title>
 </head>
 <body>
-  <h1>Select mediat</h1>
+  <h1>Select media</h1>
   
   <select id="mediaSelector" onchange="showMedia()">
     <option value="">Select Media Type</option>
